[package]
name = "tryagain"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.4"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["rt", "macros", "time"] }
