[package]
name = "tryagain"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"
description = "A library to try things again if they fail."
repository = "https://github.com/vlakreeh/tryagain"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", optional = true }
tokio = { version = "1.0.2", features = ["rt", "macros", "time"], optional = true }
pin-project = { version = "1.0.4", optional = true }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["async-std", "pin-project"]
runtime-tokio = ["tokio", "pin-project"]
